# tfsumpy

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/workflows/: ci.yaml  docs.yml  release.yml
.task/checksum/: install
api/analyzers/: index.html
api/models/: index.html
api/reporters/: index.html
bolwerk/: __init__.py  __main__.py  reporter.py  resource.py
bolwerk/db/: manager.py
bolwerk/plan/: reporter.py
bolwerk/policies/: aws.yaml  azuread.yaml  azurerm.yaml
bolwerk/policy/: __init__.py  default_loader.py  evaluator.py  reporter.py
bolwerk/reporters/: base_reporter.py
bolwerk/risk/: analyzer.py
bolwerk/risk/providers/: aws.py
bolwerk/schemas/: policy_schema.yaml
contributing/: index.html
docs/: DEFAULT_POLICIES.md  POLICIES.md  contributing.md  extending.md  getting_started.md  index.md  security.md  tests.md
docs/api/: analyzers.md  models.md  reporters.md
docs/features/: ai_analysis.md  plan_analysis.md  policy_compliance.md  risk_assessment.md
docs/usage/: advanced_usage.md  ai_analysis.md  command_line.md  configuration.md  troubleshooting.md
extending/: index.html
features/plan_analysis/: index.html
samples/: azure_landing_zone_plan.json
scripts/: install_ai_deps.sh
search/: search_index.json
tests/: conftest.py  test_analyzer.py  test_cli.py  test_context.py  test_main.py  test_policy.py  test_reporter.py
tests/ai/: test_ai_base.py
tests/cli/: test_cli_detailed.py
tests/plan/: test_plan_analyzer.py  test_plan_reporter.py
tests/policies/: test_policy_analyzer.py  test_policy_evaluator.py  test_policy_loader.py  test_policy_reporter.py
tests/risks/: test_risk_analyzer.py  test_risk_reporter.py
tfsumpy/: __init__.py  __main__.py  analyzer.py  context.py  models.py  plan_analyzer.py  plugins.py  report.py  resource.py  rules_config.json
tfsumpy/ai/: agent_workflow.py  base.py  reporter.py  summarizer.py
tfsumpy/db/: manager.py
tfsumpy/plan/: analyzer.py  reporter.py
tfsumpy/policy/: __init__.py  analyzer.py  db_manager.py  default_loader.py  loader.py  models.py
tfsumpy/reporters/: base_reporter.py
tfsumpy/risk/: analyzer.py  models.py  reporter.py
tfsumpy/risk/providers/: aws.py
tfsumpy/schemas/: policy_schema.yaml
tfsumpy/templates/: plan_report.md
tfsumpy/tests/: plan_analyzer_test.py  sample1.json
usage/advanced_usage/: index.html
usage/configuration/: index.html
