[tool.poetry]
name = "tfsumpy"
version = "0.2.0"
description = "A Python tool for Terraform state summary"
authors = ["Rafael H de Carvalho <rafaelherik@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rafaelherik/tfsumpy"
documentation = "https://github.com/rafaelherik/tfsumpy"
keywords = ["terraform", "infrastructure", "cloud", "DevOps"]
license = "MIT"
packages = [{include = "tfsumpy"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rafaelherik/tfsumpy/issues"
"Source Code" = "https://github.com/rafaelherik/tfsumpy"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pytest = ">=7.0.0"
pyyaml = ">=5.1"
jsonschema = ">=3.2.0"
colorama = ">=0.4.6"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.6.1"
coverage = ">=7.2.0"

[tool.poetry.extras]
dev = [
    "pytest-cov",
    "pytest-mock",
    "coverage"
]

[tool.poetry.scripts]
tfsumpy = "tfsumpy.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 